--- a/src/app/forest-management/forest-management.component.html
+++ b/src/app/forest-management/forest-management.component.html
@@ -23,11 +23,12 @@
                     </div>
                 </div>
                 <hr>
+    
                 <div class="row">
                     <div class="col">
                         <div class="form-group">
 
-                            <select class="form-control" id="selectBiome">
+                            <select class="form-control" name="selectBiome" [(ngModel)]="forestManagementProducer.forestVegetation"  id="selectBiome">
                                 <option value="Subtropical humid forest">Subtropical humid forest</option>
                                 <option value="Subtropical dry forest">Subtropical dry forest</option>
                                 <option value="Subtropical steppe">Subtropical steppe</option>
@@ -43,7 +44,7 @@
                     <div class="col">
                         <div class="form-group">
 
-                            <select class="form-control" name="start1" [(ngModel)]="start1" id="selectIntensity">
+                            <select class="form-control" name="start1" [(ngModel)]="forestManagementProducer.startForestDegradationLevel" id="selectIntensity">
                                 <option value="0">None</option>
                                 <option value="1">Very low</option>
                                 <option value="2">Low</option>
@@ -57,7 +58,7 @@
                     <div class="col">
                         <div class="form-group">
 
-                            <select class="form-control" name="without1" [(ngModel)]="without1" id="selectIntensity">
+                            <select class="form-control" name="without1" [(ngModel)]="forestManagementProducer.withoutForestDegradationLevel" id="selectIntensity">
                                 <option value="0">None</option>
                                 <option value="1">Very low</option>
                                 <option value="2">Low</option>
@@ -71,69 +72,7 @@
                     <div class="col">
                         <div class="form-group">
 
-                            <select class="form-control" name="with1" [(ngModel)]="with1" id="selectIntensity">
-                                <option value="0">None</option>
-                                <option value="1">Very low</option>
-                                <option value="2">Low</option>
-                                <option value="3">Moderate</option>
-                                <option value="4">Large</option>
-                                <option value="5">Extreme</option>
-                            </select>
-                        </div>
-
-                    </div>
-
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" id="selectBiome">
-                                <option value="Subtropical humid forest">Subtropical humid forest</option>
-                                <option value="Subtropical dry forest">Subtropical dry forest</option>
-                                <option value="Subtropical steppe">Subtropical steppe</option>
-                                <option value="Subtropical mountain systems">Subtropical mountain systems</option>
-                                <option value="Planeted Subtropical humid forest">Planeted Subtropical humid forest
-                                </option>
-                                <option value="Planeted dry forest">Planeted dry forest</option>
-                                <option value="Planeted steppe">Planeted steppe</option>
-                            </select>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" name="start2" [(ngModel)]="start2" id="selectIntensity">
-                                <option value="0">None</option>
-                                <option value="1">Very low</option>
-                                <option value="2">Low</option>
-                                <option value="3">Moderate</option>
-                                <option value="4">Large</option>
-                                <option value="5">Extreme</option>
-                            </select>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" name="without2" [(ngModel)]="without2" id="selectIntensity">
-                                <option value="0">None</option>
-                                <option value="1">Very low</option>
-                                <option value="2">Low</option>
-                                <option value="3">Moderate</option>
-                                <option value="4">Large</option>
-                                <option value="5">Extreme</option>
-                            </select>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" name="with2" [(ngModel)]="with2" id="selectIntensity">
+                            <select class="form-control" name="with1" [(ngModel)]="forestManagementProducer.withForestDegradationLevel" id="selectIntensity">
                                 <option value="0">None</option>
                                 <option value="1">Very low</option>
                                 <option value="2">Low</option>
@@ -146,75 +85,14 @@
                     </div>
 
                 </div>
-                <hr>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" id="selectBiome">
-                                <option value="Subtropical humid forest">Subtropical humid forest</option>
-                                <option value="Subtropical dry forest">Subtropical dry forest</option>
-                                <option value="Subtropical steppe">Subtropical steppe</option>
-                                <option value="Subtropical mountain systems">Subtropical mountain systems</option>
-                                <option value="Planeted Subtropical humid forest">Planeted Subtropical humid forest
-                                </option>
-                                <option value="Planeted dry forest">Planeted dry forest</option>
-                                <option value="Planeted steppe">Planeted steppe</option>
-                            </select>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" name="start3" [(ngModel)]="start3" id="selectIntensity">
-                                <option value="0">None</option>
-                                <option value="1">Very low</option>
-                                <option value="2">Low</option>
-                                <option value="3">Moderate</option>
-                                <option value="4">Large</option>
-                                <option value="5">Extreme</option>
-                            </select>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" name="without3" [(ngModel)]="without3" id="selectIntensity">
-                                <option value="0">None</option>
-                                <option value="1">Very low</option>
-                                <option value="2">Low</option>
-                                <option value="3">Moderate</option>
-                                <option value="4">Large</option>
-                                <option value="5">Extreme</option>
-                            </select>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-
-                            <select class="form-control" name="with3" [(ngModel)]="with3" id="selectIntensity">
-                                <option value="0">None</option>
-                                <option value="1">Very low</option>
-                                <option value="2">Low</option>
-                                <option value="3">Moderate</option>
-                                <option value="4">Large</option>
-                                <option value="5">Extreme</option>
-                            </select>
-                        </div>
-
-                    </div>
-
-                </div>
+               
                 <!-- Repeat the above structure for other rows -->
             </div>
         </div>
         <div style="margin-top: 10px;">
 
             <button mat-button matStepperNext mat-raised-button color="primary"
-                [disabled]="!start1 || !without1 || !with1"
+                [disabled]="!forestManagementProducer.startForestDegradationLevel || !forestManagementProducer.withoutForestDegradationLevel || !forestManagementProducer.withForestDegradationLevel"
                 style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px;">Next</button>
         </div>
     </mat-step>
@@ -249,85 +127,35 @@
                 </div>
                 <hr>
                 <div class="row">
+                  
                     <div class="col">
-                        <select class="form-control">
-                            <option value="No">No</option>
-                            <option value="Yes">Yes</option>
+                        <select class="form-control" [(ngModel)]="forestManagementProducer.withoutFireOccurrence" name="withoutFireOccurrence">
+                            <option value="0">No</option>
+                            <option value="1">Yes</option>
                         </select>
                     </div>
                     <div class="col">
-                        <select class="form-control">
-                            <option value="No">No</option>
-                            <option value="Yes">Yes</option>
+                        <select [(ngModel)]="forestManagementProducer.withFireOccurrence" name="withFireOccurrence" class="form-control">
+                            <option value="0">No</option>
+                            <option value="1">Yes</option>
                         </select>
                     </div>
                     <div class="col">
-                        <input class="form-control" placeholder="Please select">
+                        <input class="form-control" disabled value="7" placeholder="Please select">
                     </div>
                     <div class="col">
-                        <input class="form-control" placeholder="Please select">
+                        <input class="form-control" disabled value="1" placeholder="Please select">
+                    </div>
+
+           
+                    <div class="col">
+                        <input type="number" class="form-control" id="percentage_input" [(ngModel)]="forestManagementProducer.withoutFireImpact" name="withoutFireImpact" min="0" max="100" step="0.01">
                     </div>
                     <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
+                        <input type="number" class="form-control" id="percentage_input2" [(ngModel)]="forestManagementProducer.withFireImpact" name="withFireImpact" min="0" max="100" step="0.01">
                     </div>
                 </div>
-                <hr>
-                <div class="row">
-                    <div class="col">
-                        <select class="form-control">
-                            <option value="No">No</option>
-                            <option value="Yes">Yes</option>
-                        </select>
-                    </div>
-                    <div class="col">
-                        <select class="form-control">
-                            <option value="No">No</option>
-                            <option value="Yes">Yes</option>
-                        </select>
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col">
-                        <select class="form-control">
-                            <option value="No">No</option>
-                            <option value="Yes">Yes</option>
-                        </select>
-                    </div>
-                    <div class="col">
-                        <select class="form-control">
-                            <option value="No">No</option>
-                            <option value="Yes">Yes</option>
-                        </select>
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                    <div class="col">
-                        <input class="form-control" placeholder="Please select">
-                    </div>
-                </div>
+             
                 <!-- Repeat the above structure for other rows -->
             </div>
         </div>
@@ -349,13 +177,19 @@
                     <div class="col">
                         <strong>Strat</strong>
                     </div>
+                    <div class="col">
+                        <strong>With</strong>
+                    </div>
+                    <div class="col">
+                        <strong>Without</strong>
+                    </div>
                   
 
                 </div>
                 <hr>
                 <div class="row">
                     <div class="col">
-                        <input class="form-control" name="startarea1" [(ngModel)]="startarea1"
+                        <input class="form-control" name="startForestedAreaManagement" [(ngModel)]="forestManagementProducer.startForestedAreaManagement"
                             placeholder="Please select">
                     </div>
                     <div class="col">
@@ -365,29 +199,13 @@
                         <input class="form-control" placeholder="Please select">
                     </div>
                 </div>
-                <hr>
-                <div class="row">
-                    <div class="col">
-                        <input class="form-control" name="startarea2" [(ngModel)]="startarea2"
-                            placeholder="Please select">
-                    </div>
-                 
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col">
-                        <input class="form-control" name="startarea3" [(ngModel)]="startarea3"
-                            placeholder="Please select">
-                    </div>
-                  
-                </div>
-                <!-- Repeat the above structure for other rows -->
+                
             </div>
         </div>
         <div style="margin-top: 10px;">
             <button mat-button matStepperPrevious mat-raised-button color="warn"
                 style="font-size: 12px !important; padding: 4px 8px !important; width: 100px;">Back</button>
-            <button mat-button matStepperNext mat-raised-button [disabled]="!startarea1" (click)="calcul()"
+            <button mat-button matStepperNext mat-raised-button  (click)="calcul()"
                 style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px; background-color: darkgreen; color: aliceblue;">Save</button>
         </div>
 
@@ -420,7 +238,7 @@
         <div style="margin-top: 10px;">
             <button mat-button matStepperPrevious mat-raised-button color="warn"
                 style="font-size: 12px !important; padding: 4px 8px !important; width: 100px;">Back</button>
-            <button mat-button matStepperNext mat-raised-button color="primary"
+            <button mat-button matStepperNext mat-raised-button color="primary" (click)="save()"
                 style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px;">Confirme</button>
         </div>
     </mat-step>
